<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BathroomRater</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_university_select">UniversitySelectActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_selection_hub">SelectionHub</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_bathroom">BathroomActivity</string>
    <string name="string_1">Cleanliness</string>
    <string name="string_2">Privacy</string>
    <string name="string_3">Scent</string>
    <string name="string_4">Supplies</string>
    <string name="string_5">Experience</string>
    <string name="string_6">Comments</string>

</resources>